--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
       sizes="16x16"
       href="assets/images/favicon/favicon-16x16.png"
     />
-    <!-- <link rel="manifest" href="assets/images/favicon/site.webmanifest" /> -->
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
     <link rel="icon" href="assets/images/favicon/favicon.ico" />
   </head>
 
   <body>
-<!-- this site main INFINIZAI -->
 
     <header>
       <nav class="navbar">
@@ -101,7 +100,7 @@
         </div>
       </section>
     </header>
-    
+
     <section id="sponsors">
       <div class="container sponsor">
         <span
